2012-08-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_interface.c (xml_get_record): Minor optimization -- stop setting
	XMLDEPTH twice for XML_PULLER_START_ELEMENT tokens.

2012-07-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_interface.c (can_take_file): Fix forward declaration.

2012-07-29         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_interface.c (can_take_file): Arg should be const.

2012-07-29         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_interface.c (xml_get_record): No need to test for NULL errcode
	pointer.  Add new rt_start and rt_len arguments, and set *rt_len to
	0 to set RT to "".

2012-07-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* common.h (set_ERRNO): Redefine since update_ERRNO_string no longer
	takes a 2nd argument.
	* xml_interface.c (xml_parser): Add declaration for new
	register_input_parser API that replaces register_open_hook.
	(can_take_file): New boolean function indicating whether we want
	to parse the file.
	(take_control_of): New name for xml_iop_open.  Remove check for
	do_traditional flag, since we would never get here if operating
	in traditional mode.  Must now set opaque value ourselves, and return 1
	to indicate success.

2012-07-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: Need to link with $(LIBINTL).
	* gd.c, mpfr.c, pgsql.c: Convert lintwarn messages to use gettext.
	* xml_interface.c (SET_ARRAY_ELEMENT): Use gettext in fatal message.

2012-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* common.h (set_ERRNO_no_gettext): Remove macro.
	(set_ERRNO): Never request translation by gawk, since we must translate
	using our own message catalogs.
	* gd.c, pgsql.c: Use set_ERRNO with _() macro so gettext will work.
	* xml_interface.c (xml_get_record): Use set_ERRNO instead of
	update_ERRNO_string to be consistent.
